# $Id: Makefile.am,v 1.7 2004/03/01 20:26:11 mike Exp $
#
# Libnet automake information file
# Copyright (c) 1998 - 2004 Mike D. Schiffman <mike@infonexus.com>
# All rights reserved.
#
# Process this file with automake to produce a Makefile.in script.

include $(top_srcdir)/Makefile.am.common

SUBDIRS = include src sample doc win32

EXTRA_DIST = Makefile.am.common

bin_SCRIPTS = libnet-config
