
# $Id: Makefile.am,v 1.32 2004/06/27 12:51:01 alor Exp $

include $(top_srcdir)/Makefile.am.common

noinst_HEADERS = ec.h \
                 ec_capture.h \
                 ec_checksum.h \
                 ec_conf.h \
                 ec_connbuf.h \
                 ec_conntrack.h \
                 ec_debug.h \
                 ec_decode.h \
                 ec_dispatcher.h \
                 ec_dissect.h \
                 ec_error.h \
                 ec_file.h \
                 ec_filter.h \
                 ec_fingerprint.h \
                 ec_format.h \
                 ec_globals.h \
                 ec_hash.h \
                 ec_hook.h \
                 ec_http.h \
                 ec_inet.h \
                 ec_inject.h \
                 ec_interfaces.h \
                 ec_log.h \
                 ec_manuf.h \
                 ec_mitm.h \
                 ec_os_mingw.h \
                 ec_packet.h \
                 ec_parser.h \
                 ec_passive.h \
                 ec_plugins.h \
                 ec_poll.h \
                 ec_profiles.h \
                 ec_proto.h \
                 ec_queue.h \
                 ec_resolv.h \
                 ec_scan.h \
                 ec_send.h \
                 ec_services.h \
                 ec_session.h \
                 ec_session_tcp.h \
                 ec_signals.h \
                 ec_socket.h \
                 ec_sniff.h \
                 ec_sniff_bridge.h \
                 ec_sniff_unified.h \
                 ec_sslwrap.h \
                 ec_stats.h \
                 ec_stdint.h \
                 ec_streambuf.h \
                 ec_strings.h \
                 ec_threads.h \
                 ec_ui.h \
                 ec_update.h \
                 ec_version.h \
                 el.h \
                 el_functions.h \
                 ef.h \
                 ef_functions.h
  
  
EXTRA_DIST = missing/*

CLEANFILES = *.log *.out core.* *~ .*swp

# vim:ts=4:expandtab             
