
# $Id: Makefile.am,v 1.28 2004/10/25 21:26:33 lordnaga Exp $

include $(top_srcdir)/Makefile.am.common

SUBDIRS =   arp_cop \
            autoadd \
            chk_poison \
            dns_spoof \
            dos_attack \
            dummy \
            find_conn \
            find_ettercap \
            find_ip \
            finger \
            finger_submit \
            gre_relay \
            gw_discover \
            isolate \
            link_type \
            pptp_chapms1 \
            pptp_clear \
            pptp_pap \
            pptp_reneg \
            rand_flood \
            remote_browser \
            reply_arp \
            repoison_arp \
            scan_poisoner \
            search_promisc \
            smb_clear \
            smb_down \
            stp_mangler 

# vim:ts=4:noexpandtab
