
# $Id: Makefile.am,v 1.9 2004/04/15 20:57:32 alor Exp $

include $(top_srcdir)/Makefile.am.common

pkgdata_DATA = etter.dns \
               etter.fields \
               etter.filter \
               etter.filter.examples \
               etter.filter.kill \
               etter.filter.ssh \
               etter.finger.mac \
               etter.finger.os \
               etter.mime \
               etter.services \
               etter.ssl.crt \
               etterfilter.cnt \
               etterfilter.tbl \
               etterlog.dtd \
	            ettercap.png

sysconf_DATA = etter.conf

EXTRA_DIST = etter*
